<resources>
    <string name="app_name">database</string>
    <string name="name">Enter your name</string>
    <string name="hint">Enter Your Mail Address </string>
    <string name="password">Password</string>
    <string name="Unique">UniqueId</string>
    <string name="button">SignIn</string>
    <string name="login">btnsign</string>
    <string name="Unique_1">UniqueId</string>
    <string name="EmailId">EmailId</string>
   <string name="database">These are your details from our database</string>
    <string name="welcome">Welcome</string>
</resources>